ceammc/ext/src/lib/lex/parser_music.cpp

#line 1 "lex/parser_music.rl"
# include "parser_music.h"
# include "parser_numeric.h"
# include "ceammc_log.h"
# include "ceammc_music_theory_tempo.h"

# include <cstdint>
# include <cstring>

using namespace ceammc;
using namespace ceammc::music;

namespace  {

    struct RagelTempo {
        int ival { 0 };
        int fnum { 0 };
        int fden { 1 };
        int dur_num { 1 };
        int dur_den { 4 };
    };

    struct RagelSpn {
        PitchName note = PitchName::C;
        Alteration alt = Alteration::NATURAL;
        int oct { 0 };
        int dev { 0 };
        int sign { 1 };
        int rest { 0 };
        OctaveType octtype { OCTAVE_ABS };
    };

    struct RagelDuration {
        int16_t num { 0 };
        int16_t den { 1 };
        int8_t dots { 0 };
        int repeats { 1 };
        DurationType durtype { DURATION_ABS };
    };

    struct RagelNotation {
        int dots { 0 };
        int num { 0 };
        int den { 1 };
        int rest { 0 };
        int tnum { 0 };
        int tden { 0 };
        int repeats { 1 };
        DurationType durtype { DURATION_ABS };
    };

    struct RagelTimeSig {
        using Duration = std::pair<std::uint8_t, std::uint8_t>;
        using DurationList = boost::container::small_vector<Duration, 2>;
        DurationList sig;
        std::uint8_t num { 0 }, div { 0 };
    };

    struct RagelChordType {
        std::uint8_t data_[8] = { 0 };

    public:
        RagelChordType() { }
        size_t size() const { return data_[0]; }

        bool assign(std::initializer_list<int> data)
        {
            if (data.size() > 7)
                return false;

            for (int i = 0; i < data.size(); i++)
                data_[i + 1] = *(data.begin() + i);

            data_[0] = data.size();
            return true;
        }

        std::uint8_t* begin() { return &data_[1]; }
        const std::uint8_t* begin() const { return &data_[1]; }
        std::uint8_t* end() { return &data_[1] + data_[0]; }
        const std::uint8_t* end() const { return &data_[1] + data_[0]; }
    };

    Tempo fromRagel(const RagelTempo& t)
    {
        float bpm = t.ival + t.fnum / float(t.fden);
        Tempo res { bpm, t.dur_den };
        res.setDuration(Duration(t.dur_num, t.dur_den));
        return res;
    }

    Spn fromRagel(const RagelSpn& x)
    {
        if (x.rest)
            return {};

        Spn res(PitchClass(x.note, x.alt), Octave(x.oct, x.octtype));
        res.setDeviation(x.dev);
        return res;
    }

    Duration fromRagel(const RagelDuration& x)
    {
        Duration res(x.num, x.den, x.dots);
        res.setNumRepeats(x.repeats);
        res.setType(x.durtype);
        return res;
    }

    Notation fromRagel(const RagelSpn& spn, const RagelNotation& n)
    {
        auto x_spn = fromRagel(spn);
        auto x_dur = Duration(n.num, n.den, n.dots);
        x_dur.setType(n.durtype);
        Notation res(x_spn, x_dur);
        if (n.repeats > 1)
            res.setNumRepeats(n.repeats);

        return res;
    }

    ChordType fromRagel(const RagelChordType& t)
    {
        ChordType res{{}};
        res.setFrom(t.begin(), t.end());
        return res;
    }
}

namespace ceammc {
namespace parser {


#line 136 "lex/parser_music.cpp"
static const int bpm_start = 1;
static const int bpm_first_final = 7;
static const int bpm_error = 0;

static const int bpm_en_main = 1;


#line 138 "lex/parser_music.rl"


bool parse_tempo(const char* str, music::Tempo& t)
{
    const auto len = strlen(str);
    if (len == 0)
        return false;

    int cs = 0;
    const char* p = str;
    const char* pe = p + len;
    const char* eof = pe;

    DECLARE_RAGEL_COMMON_VARS;
    RagelTempo bpm;

    
#line 162 "lex/parser_music.cpp"
	{
	cs = bpm_start;
	}

#line 155 "lex/parser_music.rl"
    
#line 169 "lex/parser_music.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) == 48 )
		goto tr0;
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr2;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 9 "lex/ragel_music.rl"
	{ bpm.dur_num = 1; bpm.dur_den = 4; }
#line 6 "lex/ragel_music.rl"
	{ (bpm.ival *= 10) += ((*p) - '0'); }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 194 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 46: goto st2;
		case 95: goto st9;
		case 98: goto st3;
		case 124: goto st5;
	}
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr3;
	goto st0;
tr3:
#line 7 "lex/ragel_music.rl"
	{ (bpm.fnum *= 10) += ((*p) - '0'); bpm.fden *= 10; }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 217 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 95: goto st9;
		case 98: goto st3;
		case 124: goto st5;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr3;
	goto st0;
tr15:
#line 24 "lex/ragel_music.rl"
	{bpm.dur_num = 1;}
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 234 "lex/parser_music.cpp"
	if ( (*p) == 98 )
		goto st3;
	goto st0;
tr16:
#line 24 "lex/ragel_music.rl"
	{bpm.dur_num = 1;}
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 246 "lex/parser_music.cpp"
	if ( (*p) == 112 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 109 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr6;
	goto st0;
tr6:
#line 11 "lex/ragel_music.rl"
	{ bpm.dur_num = 0; }
#line 12 "lex/ragel_music.rl"
	{ (bpm.dur_num *= 10) += ((*p) - '0'); }
#line 13 "lex/ragel_music.rl"
	{ bpm.dur_den = 0;}
#line 14 "lex/ragel_music.rl"
	{ (bpm.dur_den *= 10) += ((*p) - '0'); }
	goto st11;
tr14:
#line 12 "lex/ragel_music.rl"
	{ (bpm.dur_num *= 10) += ((*p) - '0'); }
#line 14 "lex/ragel_music.rl"
	{ (bpm.dur_den *= 10) += ((*p) - '0'); }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 289 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 46: goto tr12;
		case 47: goto st6;
		case 95: goto tr15;
		case 98: goto tr16;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr14;
	goto st0;
tr12:
#line 24 "lex/ragel_music.rl"
	{bpm.dur_num = 1;}
#line 8 "lex/ragel_music.rl"
	{ bpm.dur_num *= 3; bpm.dur_den *= 2; }
	goto st12;
tr17:
#line 8 "lex/ragel_music.rl"
	{ bpm.dur_num *= 3; bpm.dur_den *= 2; }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 313 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 95: goto st9;
		case 98: goto st3;
	}
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr7;
	goto st0;
tr7:
#line 13 "lex/ragel_music.rl"
	{ bpm.dur_den = 0;}
#line 14 "lex/ragel_music.rl"
	{ (bpm.dur_den *= 10) += ((*p) - '0'); }
	goto st13;
tr18:
#line 14 "lex/ragel_music.rl"
	{ (bpm.dur_den *= 10) += ((*p) - '0'); }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 340 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 46: goto tr17;
		case 95: goto st9;
		case 98: goto st3;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr18;
	goto st0;
tr2:
#line 9 "lex/ragel_music.rl"
	{ bpm.dur_num = 1; bpm.dur_den = 4; }
#line 6 "lex/ragel_music.rl"
	{ (bpm.ival *= 10) += ((*p) - '0'); }
	goto st14;
tr19:
#line 6 "lex/ragel_music.rl"
	{ (bpm.ival *= 10) += ((*p) - '0'); }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 363 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 46: goto st2;
		case 95: goto st9;
		case 98: goto st3;
		case 124: goto st5;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr19;
	goto st0;
	}
	_test_eof7: cs = 7; goto _test_eof; 
	_test_eof2: cs = 2; goto _test_eof; 
	_test_eof8: cs = 8; goto _test_eof; 
	_test_eof9: cs = 9; goto _test_eof; 
	_test_eof3: cs = 3; goto _test_eof; 
	_test_eof4: cs = 4; goto _test_eof; 
	_test_eof10: cs = 10; goto _test_eof; 
	_test_eof5: cs = 5; goto _test_eof; 
	_test_eof11: cs = 11; goto _test_eof; 
	_test_eof12: cs = 12; goto _test_eof; 
	_test_eof6: cs = 6; goto _test_eof; 
	_test_eof13: cs = 13; goto _test_eof; 
	_test_eof14: cs = 14; goto _test_eof; 

	_test_eof: {}
	if ( p == eof )
	{
	switch ( cs ) {
	case 7: 
	case 8: 
	case 9: 
	case 10: 
	case 12: 
	case 13: 
	case 14: 
#line 10 "lex/ragel_music.rl"
	{ ragel_cat = CAT_UNIT; ragel_type = TYPE_BPM; }
	break;
	case 11: 
#line 24 "lex/ragel_music.rl"
	{bpm.dur_num = 1;}
#line 10 "lex/ragel_music.rl"
	{ ragel_cat = CAT_UNIT; ragel_type = TYPE_BPM; }
	break;
#line 408 "lex/parser_music.cpp"
	}
	}

	_out: {}
	}

#line 156 "lex/parser_music.rl"

    const bool ok = cs >= 7;

    if (ok)
        t = fromRagel(bpm);

    return ok;
}

bool parse_tempo(const Atom& a, music::Tempo& t)
{
    if (a.isSymbol())
        return parse_tempo(a.asT<t_symbol*>()->s_name, t);
    else if(a.isFloat()) {
        auto f = a.asT<t_float>();
        if (f < 0)
            return false;

        t = Tempo(a.asT<t_float>(), 4);
        return true;
    } else
        return false;
}


#line 441 "lex/parser_music.cpp"
static const int spn_start = 1;
static const int spn_first_final = 8;
static const int spn_error = 0;

static const int spn_en_main = 1;


#line 186 "lex/parser_music.rl"


bool parse_spn(const char* str, music::Spn& res)
{
    const auto len = strlen(str);
    if (len == 0)
        return false;

    int cs = 0;
    const char* p = str;
    const char* pe = p + len;
    const char* eof = pe;

    DECLARE_RAGEL_COMMON_VARS;
    RagelSpn spn;

    
#line 467 "lex/parser_music.cpp"
	{
	cs = spn_start;
	}

#line 203 "lex/parser_music.rl"
    
#line 474 "lex/parser_music.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 65: goto tr0;
		case 67: goto tr3;
		case 68: goto tr4;
		case 69: goto tr5;
		case 70: goto tr6;
		case 71: goto tr7;
	}
	if ( 66 <= (*p) && (*p) <= 72 )
		goto tr2;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 81 "lex/ragel_music.rl"
	{spn.alt = Alteration::NATURAL; spn.oct = 0; spn.octtype = OCTAVE_REL; spn.dev = 0;}
#line 41 "lex/ragel_music.rl"
	{spn.note = PitchName::A; }
	goto st8;
tr2:
#line 81 "lex/ragel_music.rl"
	{spn.alt = Alteration::NATURAL; spn.oct = 0; spn.octtype = OCTAVE_REL; spn.dev = 0;}
#line 42 "lex/ragel_music.rl"
	{spn.note = PitchName::B; }
	goto st8;
tr3:
#line 81 "lex/ragel_music.rl"
	{spn.alt = Alteration::NATURAL; spn.oct = 0; spn.octtype = OCTAVE_REL; spn.dev = 0;}
#line 43 "lex/ragel_music.rl"
	{spn.note = PitchName::C; }
	goto st8;
tr4:
#line 81 "lex/ragel_music.rl"
	{spn.alt = Alteration::NATURAL; spn.oct = 0; spn.octtype = OCTAVE_REL; spn.dev = 0;}
#line 44 "lex/ragel_music.rl"
	{spn.note = PitchName::D; }
	goto st8;
tr5:
#line 81 "lex/ragel_music.rl"
	{spn.alt = Alteration::NATURAL; spn.oct = 0; spn.octtype = OCTAVE_REL; spn.dev = 0;}
#line 45 "lex/ragel_music.rl"
	{spn.note = PitchName::E; }
	goto st8;
tr6:
#line 81 "lex/ragel_music.rl"
	{spn.alt = Alteration::NATURAL; spn.oct = 0; spn.octtype = OCTAVE_REL; spn.dev = 0;}
#line 46 "lex/ragel_music.rl"
	{spn.note = PitchName::F; }
	goto st8;
tr7:
#line 81 "lex/ragel_music.rl"
	{spn.alt = Alteration::NATURAL; spn.oct = 0; spn.octtype = OCTAVE_REL; spn.dev = 0;}
#line 47 "lex/ragel_music.rl"
	{spn.note = PitchName::G; }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 541 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 35: goto tr14;
		case 40: goto tr15;
		case 45: goto tr16;
		case 94: goto tr18;
		case 95: goto tr19;
		case 98: goto tr20;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto st0;
tr14:
#line 37 "lex/ragel_music.rl"
	{spn.alt = Alteration::SHARP; }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 561 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 35: goto tr21;
		case 40: goto tr15;
		case 45: goto tr16;
		case 94: goto tr18;
		case 95: goto tr19;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto st0;
tr21:
#line 38 "lex/ragel_music.rl"
	{spn.alt = Alteration::DOUBLE_SHARP; }
	goto st10;
tr32:
#line 40 "lex/ragel_music.rl"
	{spn.alt = Alteration::DOUBLE_FLAT; }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 584 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 40: goto tr15;
		case 45: goto tr16;
		case 94: goto tr18;
		case 95: goto tr19;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto st0;
tr15:
#line 64 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st2;
tr22:
#line 55 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_ABS;}
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 606 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 43: goto tr8;
		case 45: goto tr8;
	}
	goto st0;
tr8:
#line 69 "lex/ragel_music.rl"
	{spn.sign = ((*p)=='-') ? -1 : 1;}
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 620 "lex/parser_music.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr9;
	goto st0;
tr9:
#line 70 "lex/ragel_music.rl"
	{(spn.dev *= 10) += ((*p) - '0');}
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 632 "lex/parser_music.cpp"
	if ( (*p) == 99 )
		goto st6;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr10;
	goto st0;
tr10:
#line 70 "lex/ragel_music.rl"
	{(spn.dev *= 10) += ((*p) - '0');}
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 646 "lex/parser_music.cpp"
	if ( (*p) == 99 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 41 )
		goto tr12;
	goto st0;
tr12:
#line 71 "lex/ragel_music.rl"
	{spn.dev *= spn.sign;}
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 665 "lex/parser_music.cpp"
	goto st0;
tr16:
#line 64 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 675 "lex/parser_music.cpp"
	if ( (*p) == 49 )
		goto tr13;
	goto st0;
tr13:
#line 52 "lex/ragel_music.rl"
	{spn.oct = -1;}
	goto st12;
tr17:
#line 64 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
#line 53 "lex/ragel_music.rl"
	{spn.oct = ((*p) - '0');}
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 693 "lex/parser_music.cpp"
	if ( (*p) == 40 )
		goto tr22;
	goto st0;
tr18:
#line 64 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
#line 59 "lex/ragel_music.rl"
	{spn.oct++;}
#line 62 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 709 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 40: goto st2;
		case 94: goto tr24;
	}
	goto st0;
tr24:
#line 59 "lex/ragel_music.rl"
	{spn.oct++;}
#line 62 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 725 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 40: goto st2;
		case 94: goto tr25;
	}
	goto st0;
tr25:
#line 59 "lex/ragel_music.rl"
	{spn.oct++;}
#line 62 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 741 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 40: goto st2;
		case 94: goto tr26;
	}
	goto st0;
tr26:
#line 59 "lex/ragel_music.rl"
	{spn.oct++;}
#line 62 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 757 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 40: goto st2;
		case 94: goto tr27;
	}
	goto st0;
tr27:
#line 59 "lex/ragel_music.rl"
	{spn.oct++;}
#line 62 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st17;
tr31:
#line 61 "lex/ragel_music.rl"
	{spn.oct--;}
#line 62 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 779 "lex/parser_music.cpp"
	if ( (*p) == 40 )
		goto st2;
	goto st0;
tr19:
#line 64 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
#line 61 "lex/ragel_music.rl"
	{spn.oct--;}
#line 62 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 795 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 40: goto st2;
		case 95: goto tr28;
	}
	goto st0;
tr28:
#line 61 "lex/ragel_music.rl"
	{spn.oct--;}
#line 62 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 811 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 40: goto st2;
		case 95: goto tr29;
	}
	goto st0;
tr29:
#line 61 "lex/ragel_music.rl"
	{spn.oct--;}
#line 62 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 827 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 40: goto st2;
		case 95: goto tr30;
	}
	goto st0;
tr30:
#line 61 "lex/ragel_music.rl"
	{spn.oct--;}
#line 62 "lex/ragel_music.rl"
	{spn.octtype = OCTAVE_REL;}
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 843 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 40: goto st2;
		case 95: goto tr31;
	}
	goto st0;
tr20:
#line 39 "lex/ragel_music.rl"
	{spn.alt = Alteration::FLAT; }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 857 "lex/parser_music.cpp"
	switch( (*p) ) {
		case 40: goto tr15;
		case 45: goto tr16;
		case 94: goto tr18;
		case 95: goto tr19;
		case 98: goto tr32;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto st0;
	}
	_test_eof8: cs = 8; goto _test_eof; 
	_test_eof9: cs = 9; goto _test_eof; 
	_test_eof10: cs = 10; goto _test_eof; 
	_test_eof2: cs = 2; goto _test_eof; 
	_test_eof3: cs = 3; goto _test_eof; 
	_test_eof4: cs = 4; goto _test_eof; 
	_test_eof5: cs = 5; goto _test_eof; 
	_test_eof6: cs = 6; goto _test_eof; 
	_test_eof11: cs = 11; goto _test_eof; 
	_test_eof7: cs = 7; goto _test_eof; 
	_test_eof12: cs = 12; goto _test_eof; 
	_test_eof13: cs = 13; goto _test_eof; 
	_test_eof14: cs = 14; goto _test_eof; 
	_test_eof15: cs = 15; goto _test_eof; 
	_test_eof16: cs = 16; goto _test_eof; 
	_test_eof17: cs = 17; goto _test_eof; 
	_test_eof18: cs = 18; goto _test_eof; 
	_test_eof19: cs = 19; goto _test_eof; 
	_test_eof20: cs = 20; goto _test_eof; 
	_test_eof21: cs = 21; goto _test_eof; 
	_test_eof22: cs = 22; goto _test_eof; 
